# aiagent-threatmodeling

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: dashboard.json  index.html
docs/: architecture.md
examples/: run_demo.py
scenarios/: code_backdoor_pull_request.yaml  multi_agent_escalation.yaml  rag_poisoned_knowledgebase.yaml  urgent_email_concealment.yaml
src/agent_threatlab/: __init__.py  cli.py  dashboard.py  detectors.py  engine.py  evaluators.py  mappings.py  models.py  policies.py  reporting.py  scenario_loader.py
src/agent_threatlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dashboard.py  test_engine.py
